--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -10,10 +10,12 @@
   - quick_start_docker
   - quick_start_vm
   - data_preparation
-  - heatmap
   - alphashape
   - population
+  - heatmap
+  - walkability population heatmap
   - routing_profiles
+  
 
 - category: Contribute to OSM
   docs:
