--- a/_data/translation.yml
+++ b/_data/translation.yml
@@ -14,5 +14,5 @@ de:
   menu:                       "Menü"
   navigate_docs:              "Zur Dokumentation"
   recent_posts:               "Neue Blogeinträge"
-  upcoming_events:            "Kommende Veranstaltungen"
+  upcoming_events:            "Aktuelle Veranstaltungen"
   
